iptables/iptables.v4.conf
# docker nat
#*nat
#:POSTROUTING ACCEPT [0:0]
#-A POSTROUTING ! -o docker0 -s 172.0.0.0/8 -j MASQUERADE
#
#COMMIT

*filter

# Allow localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

#-A INPUT -d 127.0.0.0/8 -j REJECT
#-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# allow all output
-A OUTPUT -j ACCEPT

-A INPUT -p tcp --dport 22 -j ACCEPT
# -A INPUT -p tcp --dport 80 -j ACCEPT
# -A INPUT -p tcp --dport 443 -j ACCEPT

-A INPUT -p tcp -s 192.168.1.0/24 -j ACCEPT

# docker
#-A FORWARD -i docker0 -o lo -j ACCEPT
#-A FORWARD -i lo -o docker0 -j ACCEPT
#-A FORWARD -i docker0 -o eth0 -j ACCEPT
#-A FORWARD -i eth0 -o docker0 -j ACCEPT

# enable ping
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT

# log
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# disallow all input
-A INPUT -j DROP
#-A FORWARD -j DROP

COMMIT
